# room

./: CMakeLists.txt  README.md  实验报告.md
glsl/: axis.frag  axis.vert  normal.geom  normal.vert  primitive.frag  primitive.geom  primitive.vert  quad.frag  quad.vert  simple.frag  simple.vert  triangle.vert
include/: camera.h  entity.h  framebuffer.h  glsl_program.h  light.h  model.h  texture.h  utility.h  window.h
include/glad/: glad.h
src/: camera.cpp  entity.cpp  glad.c  glsl_program.cpp  main.cpp  model.cpp  texture.cpp  texture2d.cpp  utility.cpp  window.cpp
